--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.447.0",
+    "motion": "^11.11.17",
     "next": "14.2.14",
     "next-themes": "^0.3.0",
     "react": "^18",
